--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Quiz App</title>
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="app.js"></script>
 </head>
 <body>
 	<div id="wrapper">
