--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 		<section id="question">
 			<h2>Who starred in
 				<span>Charlie and the Chocolate Factory</span>,
-				<span>Pirates of the Caribbean</span>,
+				<span>Pirates of the Caribbean: The Curse of the Black Pearl</span>,
 				<span>Sleepy Hollow</span>?
 			</h2>
 		</section>
 		<div id="answer">
-			<div class="actors"></div>
-			<div class="actors"></div>
-			<div class="actors"></div>
-			<div class="actors"></div>
+			<div id="photo1" class="actors"></div>
+			<div id="photo2" class="actors"></div>
+			<div id="photo3" class="actors"></div>
+			<div id="photo4" class="actors"></div>
 		</div>
 		<footer>
 			Question <span>2</span> of <span>5</span>
