--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
 		</header>
 		<section id="question">
 			<h2>Who starred in
-				<span>Charlie and the Chocolate Factory</span>,
-				<span>Pirates of the Caribbean: The Curse of the Black Pearl</span>,
-				<span>Sleepy Hollow</span>?
+				<span>Charlie and the Chocolate Factory</span>, <span>Pirates of the Caribbean: The Curse of the Black Pearl</span> and <span>Sleepy Hollow</span>?
 			</h2>
 		</section>
 		<div id="answer">
-			<div id="photo1" class="actors"></div>
-			<div id="photo2" class="actors"></div>
-			<div id="photo3" class="actors"></div>
-			<div id="photo4" class="actors"></div>
+			<div class="row">
+				<div id="photo1" class="actors"></div>
+				<div id="photo2" class="actors"></div>
+			</div>
+			<div class="row">
+				<div id="photo3" class="actors"></div>
+				<div id="photo4" class="actors"></div>
+			</div>
 		</div>
 		<footer>
 			Question <span>2</span> of <span>5</span>
