--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h1>IMQu</h1>
 			<div class="score">
 				<span id="score-text">Your Score: </span>
-				<span id="score-value">2</span>
+				<span id="score-value"></span>
 			</div>
 		</header>
 		<section id="question">
@@ -24,13 +24,10 @@
 			</h2>
 		</section>
 		<div id="answer">
-			<div id="photo1" class="actors"></div>
-			<div id="photo2" class="actors"></div>
-			<div id="photo3" class="actors"></div>
-			<div id="photo4" class="actors"></div>
+			<div class="actors" data-image="1"><img src="images/ChristinaRicci.jpg" alt=" "></div><div class="actors" data-image="2"><img src="images/HelenaBonhamCarter.jpg" alt=" "></div><div class="actors" data-image="3"><img src="images/JohnnyDepp.jpg" alt=" "></div><div class="actors" data-image="4"><img src="images/OrlandoBloom.jpg" alt=" "></div>
 		</div>
 		<footer>
-			Question <span>2</span> of <span>5</span>
+			Question <span id="answered"></span> of <span id="numQuestions"></span>
 		</footer>
 	</div>
 </body>
