--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		</header>
 		<section id="question">
 			<h2>Who starred in
-				<span>Charlie and the Chocolate Factory</span>, <span>Pirates of the Caribbean: The Curse of the Black Pearl</span> and <span>Sleepy Hollow</span>?
+				<span id="film0"></span>, <span id="film1"></span></span> and <span id="film2"></span>?
 			</h2>
 		</section>
 		<div id="answer">
-			<div class="actors" data-image="1"><img src="images/ChristinaRicci.jpg" alt=" "></div><div class="actors" data-image="2"><img src="images/HelenaBonhamCarter.jpg" alt=" "></div><div class="actors" data-image="3"><img src="images/JohnnyDepp.jpg" alt=" "></div><div class="actors" data-image="4"><img src="images/OrlandoBloom.jpg" alt=" "></div>
+			<div class="actors" data-image="0"><img  id="photo0" src="" alt=" "></div><div class="actors" data-image="1"><img id="photo1" src="" alt=" "></div><div class="actors" data-image="2"><img id="photo2" src="" alt=" "></div><div class="actors" data-image="3"><img id="photo3" src="" alt=" "></div>
 		</div>
 		<footer>
 			Question <span id="answered"></span> of <span id="numQuestions"></span>
